--- a/css/responsive.css
+++ b/css/responsive.css
@@ -337,7 +337,6 @@ transition: 0.5s ease-in-out;
         line-height: var(--line-height21);
         color: var(--li-color);
     }
-   
     .counter__setting .container .wrapper .counter__text .counter p{
         font-size: var(--font-size14);
     }
@@ -383,14 +382,69 @@ transition: 0.5s ease-in-out;
     .fa-inr,.fa-building,.fa-tasks,.font-reload,.fa-chart-line,.fa-file-lines,.fa-calculator,.fa-book{
         font-size: var(--font-size24);
     }
-    
+    .mega__link {
+        padding: 7px 10px;
+        font-size: var(--font-size16);
+        line-height: 0.8;
+    }
+    .mega__item + .mega__item{
+        padding-bottom: 0px;
+        margin-top: 0px;
+    }
+    .mega-menu{
+        margin-bottom: 0px;
+        height: 102vh;
+    }
+    .button2{
+        width: 100px;
+        font-size: var(--font-size14);
+     }
+     .signup-section{
+        padding: 12px 0px 4px;
+    }
+    .signup-section .sign{
+        font-size: var(--font-size14);
+        color: var(--para-tint-h4);
+        letter-spacing: 0px;
+        margin-top: 5px;
+    }
+    .bottomHead .megastar{
+        width: 280px;
+    }
+    .mega__item h4 sub {
+        font-size: var(--font-size14) !important;
+        left: 180px !important;
+    }
+    .ui-accordion .ui-accordion-header{
+        margin: 10px 7px;
+        font-size: var(--font-size17) !important;
+        padding: 6px 16px 6px 16px;
+    }
+    .center__div ul li a{
+        font-size: var(--font-size15) !important;
+    }
+    .font_adjust{
+        margin-top: 16px;
+    } 
+    .mobile-nav-icon[name="close-outline"]{
+        padding-left: 256px !important;
+    }
+    .mobile-nav-icon{
+        font-size: var(--font-size20) !important;
+    }
+    .ui-icon{
+        width: 15px !important;
+        height: 15px !important;
+    }
+    :is(.contentSection ul li a,.contentSection2 ul li a,.contentSection3 ul li a){
+        font-size: var(--font-size16);
+    }
 }
 @media(max-width:768px){
     .logo a img{
         max-width: 222px !important;
         padding: 7px 17px 0px;
     }
-   
     .container{
         max-width: 720px;
         padding: 0px 10px;
@@ -401,15 +455,9 @@ transition: 0.5s ease-in-out;
       .ui-icon-circle-plus{
         transform: scale(1.2) !important;
       }
-    .mega__link{
-        line-height: 2;
-    }
-    .mega-menu{
-        margin-top: 0px;
-    }
-    :is(.contentSection ul li a,.contentSection2 ul li a,.contentSection3 ul li a){
+    /* :is(.contentSection ul li a,.contentSection2 ul li a,.contentSection3 ul li a){
         font-size: var(--font-size16);
-    }
+    } */
     .bottomline button{
         padding: 5px 6px !important;
     }
@@ -443,8 +491,6 @@ transition: 0.5s ease-in-out;
         width: 180px !important;
         font-size: var(--font-size14);
     }
-   
-
     .jumbo .container .wrapper .jumbo__box .jumbo__box__fa-pull-right .btn-setting span{
         top: 10px;
         right: 14px;
@@ -462,6 +508,10 @@ transition: 0.5s ease-in-out;
     .counter{
         margin-bottom: 10px;
     }
+    .video__text p{
+        font-size: var(--font-size15);
+        width: fit-content;
+    }
     .form-group label{
         font-size: var(--font-size16);
     }
@@ -473,12 +523,6 @@ transition: 0.5s ease-in-out;
     }
     .card-header h2 strong, .card-content h2 strong, .card-footer h2 strong{
         font-size: var(--font-size16)!important;
-    }
-    .card-header p,.card-content p,.card-footer p{
-        font-size: var(--font-size14);
-    }
-    .card-content ul li a{
-        font-size: var(--font-size13);
     }
     .card-body{
         padding: 8px 10px 0px 9px !important;
@@ -505,13 +549,28 @@ transition: 0.5s ease-in-out;
     .h2-set{
         font-size: var(--font-size28) !important;
     }
-   
+    .video__part, .article__part{
+        width: 133px;
+    }
+    .mega__item h4 sub {
+        left: 184px !important;
+    }
+    .button {
+        font-size:var(--font-size10);
+        padding: 3px 6px !important;
+        letter-spacing: 0px;
+        width: 100px;
+    } 
+    .badge-set{
+        right: 2px;
+        font-size: var(--font-size7);
+        top: 3px;
+    }
 }
 
 @media(max-width:576px){
     .logo a img{
         max-width: 180px !important;
-        /* padding: 7px 17px 0px; */
     }
     .container{
         padding: 0px 7.5px !important;
@@ -524,9 +583,6 @@ transition: 0.5s ease-in-out;
     .card{
         width: 100%;
     }
-    /* :is(.selectSection,.selectSection2,.selectSection3){
-        justify-content: center !important;
-    } */
     .main-blog li > a{
         font-size: var(--font-size13);
         line-height: var(--line-height14) !important;
@@ -545,25 +601,18 @@ transition: 0.5s ease-in-out;
     .content ul li a{
         font-size: var(--font-size14);
     }
-
-    .bottomHead{
-        height: 50px;
-    }
     .mega-menu{
-        margin-top: -19px;
-        height: 103vh;
-        width: 300px;
+        overflow-y: scroll;
+        height: 101vh;
     }
     .bottomHead .megastar{
         max-width: 250px;
-    }
-    .mobile-nav-icon[name="close-outline"]{
-        padding-left: 280px !important;
+        top: -47px;
     }
 .mega__link{
     font-family: var(--montserrat-semibold-600-extra);
-    padding: 12px 10px;
-    font-size: var(--font-size18);
+    padding: 7px 10px;
+    font-size: var(--font-size14);
     line-height: 1;
 }
 .signup-section .sign {
@@ -572,16 +621,12 @@ transition: 0.5s ease-in-out;
  margin-top: 12px;
  flex: 0 0 44.4%;
 }
-
-.mega__item{
-    margin-top: 30px;
-}
 .mega__item + .mega__item{
-    margin-top: 13px;
+    padding-bottom: 0px;
+    margin-top: 0px;
 }
 .button2{
     width: auto;
-    /* width: 86px; */
     margin: 10px 7px;
 }
 .badge-wrapper{
@@ -596,24 +641,18 @@ transition: 0.5s ease-in-out;
     padding: 2px 7px;
 }
 .ui-accordion .ui-accordion-header{
-    margin: 10px 7px;
-    font-size: var(--font-size15) !important;
-    padding: 6px 16px 6px 16px;
+    font-size: var(--font-size14) !important;
 }
 .ui-accordion .ui-accordion-content{
     margin: 0px  7px;
     padding: 6px;
 }
 .center__div ul li a{
-    font-size: var(--font-size15);
-}
-.badge-set{
-    font-size: var(--font-size9);
+    font-size: var(--font-size14);
 }
 .mega__item h4 sub{
     font-size: var(--font-size10) !important;
-    right: 123px !important;
-
+    left: 154px !important;
 }
 .contentSection4 ul li:first-child{
     padding-bottom: 8px !important;
@@ -625,19 +664,10 @@ transition: 0.5s ease-in-out;
     font-size: var(--font-size13);
 }
 
-.mobile-nav-icon{
-    font-size: var(--font-size20) !important;
-}
 .button {
-    font-size: var(--font-size10)!important;
-    padding: 4px 10px !important;
-    letter-spacing: 0px;
-    width: 101px;
+    font-size:var(--font-size8);
+    width: 85px;
 } 
-
-.badge-set{
-    top: 3px;
-}
 .counter__setting .container .wrapper .counter__text .counter p{
     font-size: var(--font-size11);
 }
@@ -677,14 +707,9 @@ transition: 0.5s ease-in-out;
 @media(max-width:360px){
     .mega__link {
         font-size: var(--font-size12);
-        padding: 7px 10px !important;
-    }
-    .mega__item + .mega__item{
-        padding-bottom: 0px;
-        margin-top: 0px;
     }
     .bottomHead .megastar{
-        top: -50px;
+        top: -69px;
     }
     .main-blog li > a{
         font-size: var(--font-size12);
@@ -714,7 +739,6 @@ transition: 0.5s ease-in-out;
     .bottomHead{
         height: 66px;
         align-items: center;
-        /* padding: 6px 10px; */
      }
      .mega__item h4 sub {
         font-size: var(--font-size11) !important;
@@ -723,8 +747,7 @@ transition: 0.5s ease-in-out;
     :is(.selectSection,.selectSection2,.selectSection3,.selectSection4){
         justify-content: center;
         margin-top: 0px;
-    }
-    
+    } 
      .wrapper{
         flex-wrap: wrap;
      }
@@ -736,8 +759,6 @@ transition: 0.5s ease-in-out;
     }
     .mega-menu{
         width: 250px;
-        height: 101vh;
-        overflow-y: scroll;
     }
     .mega__item{
         margin-top: 0px;
@@ -750,18 +771,11 @@ transition: 0.5s ease-in-out;
         font-size: var(--font-size10);
         letter-spacing: 0px;
     }
-
     .badge-set{
         font-size: var(--font-size8);
         top: 3px;
         right: 1px;
         padding: 1px 5px;
-    }
-    /* .center__div ul li a{
-        font-size: var(--font-size16);
-    } */
-    .font_adjust{
-        margin-top: 16px;
     }
     .four-grid-template-column{
         gap: 0px 10px !important;
@@ -777,7 +791,6 @@ transition: 0.5s ease-in-out;
         font-size: var(--font-size10) !important;
         line-height: var(--line-height28)!important;
     }
-   
     .jumbo .container .wrapper .jumbo__box .jumbo__box__left h2{
         font-size: var(--font-size18);
     }
@@ -827,6 +840,4 @@ transition: 0.5s ease-in-out;
     .counter__setting .container .wrapper .counter__text{
         padding: 10px !important;
     }
- 
-    
 }
