--- a/css/common.css
+++ b/css/common.css
@@ -161,8 +161,6 @@ h5{ font-family:var(--montserrat-semibold) ;}
     /* margin-right: auto;
     margin-left: auto; */
   }
-
- 
 /* ***********container part is END here..************** */
 
 .two-grid-template-column{
@@ -251,9 +249,7 @@ h5{ font-family:var(--montserrat-semibold) ;}
 .border-none{
     border: none !important;
 }
-
  /* ******font-awesome END Here...********* */
-
 
  .button{
     font-family: var(--montserrat-regular-400-para);
@@ -289,44 +285,40 @@ h5{ font-family:var(--montserrat-semibold) ;}
     outline: none !important;
     box-shadow: none !important;
  }
- /* .button::before{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: var(--button);
-    transform: translate(130PX) rotate(45DEG);
-    top: 0px;
-    left: 0px;
-    z-index: 1;
-    transition: 0.5S ease-in-out;
- }
- .button:hover::before{
-    transform: translate(-177px) rotate(360deg);
-    transform-origin: right;
-    transition-delay: .5s linear;
-    box-shadow:var(--box-shadow) ;
- }
- .button::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: var(--badge);
-    transform: translate(-130PX) rotate(45DEG);
-    top: 0px;
-    right: 0px;
-    z-index: 2;
-    transition: 0.5S ease-in-out;
- }
- .button:hover::after{
-    transform: translate(177px) rotate(360deg);
-    transform-origin: left;
-    box-shadow:var(--box-shadow) ;
- } */
- .close-edit2{
-    margin-top: -60px !important;
+/* *************forms******************** */
+.form-group .control-majno{
+    font-size: var(--font-size12);
+    border: none;
+    outline: none;
+    box-shadow: none;
+    border: 1px solid var(--temp-head-col);
+    border-radius: 6px;
+    transition: 0.5s ease-in-out;
+    background: transparent;
+}
+.form-group .control-majno:hover,
+.form-group .control-majno:focus,
+.form-group .control-majno:visited
+.form-group .control-majno.active{
+    box-shadow: none;
+    outline: none;
+    background: transparent;
+}
+.form-group{
+    transition:0.5s ease-in-out;
+    border: none;
+}
+.anchor-tag-form a{
+    font-size: var(--font-size14) !important;
+    color:var(--para-dark-h2);
+}
+
+.close-edit2{
+    margin-top: -20px !important;
     font-size: 30px !important;
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
  }
  .close-edit[data-dismiss="modal"]:hover,
  .close-edit[data-dismiss="modal"].active,
@@ -336,7 +328,14 @@ h5{ font-family:var(--montserrat-semibold) ;}
    box-shadow: none !important;
   
 }
- 
+    select.form-control:not([size]):not([multiple]) {
+        height: calc(1.85rem + 2px) !important;
+        width: 111px !important;
+    }
+.modal-content{
+    padding: 10px !important;
+    background: var(--temp-head-line) !important;
+}
  .badge-set{
     position: absolute;
     padding: 2px 4px;
@@ -366,9 +365,7 @@ h5{ font-family:var(--montserrat-semibold) ;}
     right: -14px;
 
  }
-
  .mainButton{
-    /* font-family: var(--montserrat-regular-400-para); */
     font-size: var(--font-size11);
     line-height: var(--line-height12);
     letter-spacing: 0.04em;
@@ -428,7 +425,6 @@ h5{ font-family:var(--montserrat-semibold) ;}
 }
 .select_box .hasDropdown:hover{
 font-size: var(--font-size16);
-
 }
 .select_box .hasDropdown + .dropBox{
     display: none;
@@ -472,13 +468,11 @@ font-size: var(--font-size16);
     z-index: 88;
     padding: 0px 20px;
     border-top-left-radius: 22px !important;
-    border-top-right-radius: 22px !important;
-   
+    border-top-right-radius: 22px !important; 
 }
 .setmenu li:hover{
     background: var(--pure-white);
     box-shadow: var(--box-shadow);
-   
 }
 
 .setmenu li:first-child{
@@ -492,7 +486,7 @@ font-size: var(--font-size16);
     top: 0px;
     left: 88%;
     z-index: -1;
-     border-top-right-radius: 22px;
+    border-top-right-radius: 22px;
     transition: 0.5s ease-in-out;
 }
 .setmenu li:nth-child(7):hover::after{
@@ -541,7 +535,6 @@ font-size: var(--font-size16);
     transform: rotate(180deg);
     color: var(--m-hover-button);
 }
-
 .setmenu li .sub-menu ul .mega-menu ul{
     display: block !important;
 }
@@ -634,14 +627,10 @@ font-size: var(--font-size16);
 .contentSection4 ul{
     width: 100%;
     height: auto;
-    /* display: flex;
-    flex-wrap: wrap;
-    flex-direction: column; */
     gap: 0px 40px;
     align-items: flex-start;
 }
 .contentSection4 ul li{
-    /* width: 25%; */
     padding: 5px 20px 0 0;
 }
 .contentSection4 ul li:first-child{
@@ -669,7 +658,6 @@ font-size: var(--font-size16);
 	display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-	/* justify-content: center; */
 	text-align: center;
     margin-top: 10px;
 }
@@ -693,7 +681,6 @@ font-size: var(--font-size16);
     white-space: nowrap;
     cursor: pointer;
 }
-
 .button2::before {
     content: '';
     position: absolute;
@@ -764,10 +751,6 @@ font-size: var(--font-size16);
     background: transparent;
     overflow: hidden;
 }
-
-/* section,footer{
-    margin-top: 20px;
-} */
 /* *********************bottom-menu-set**************************** */
 .bottom-menu-set .menu-main{
     background: var(--pure-white);
@@ -778,7 +761,6 @@ font-size: var(--font-size16);
     gap: 0px 20px;
     border-bottom: 1px solid var(--form-bg);
     width: 100%;
-    /* box-shadow: var(--box-shadow); */
 }
 .bottom-menu-set .menu-main .mega-list2 {
     position: relative;
@@ -796,7 +778,6 @@ font-size: var(--font-size16);
     line-height: 1;
     text-transform: capitalize;
     position: absolute;
-
 }
 
 .bottom-menu-set .menu-main .mega-list2 a:after{
@@ -813,7 +794,6 @@ font-size: var(--font-size16);
 .bottom-menu-set .menu-main .mega-list2 a:hover::after{
     width:100% !important;
 }
-
 .bottom-menu-set .menu-main .mega-list2 a .sub-division-menu {
     position: absolute;
     top: 30px;
@@ -881,13 +861,8 @@ font-size: var(--font-size16);
     padding: 10px !important;
     background: var(--temp-head-line) !important;
 }
-
-
 /* *********************cardblock**************************** */
-/* .mega-block{
-    width: 100%;
-    padding-left: 20px;
-} */
+
 .card{
     padding: 0px !important;
     transition: 0.5s ease-in-out;
@@ -902,14 +877,12 @@ font-size: var(--font-size16);
 }
 .card img{
     transition: 0.5s ease-in-out;
-    /* border-radius: 15px 15px 0px 0px !important; */
     height: 150px;
     overflow: hidden;
 }
 
 .card:hover {
     box-shadow: var(--card-shadow);
-    /* overflow: hidden; */
 }
 .card:hover .btn-padding{
     transform: translateY(0px);
@@ -923,9 +896,7 @@ font-size: var(--font-size16);
 .card:hover .card-footer-block{
     display: none !important;
 }
-
 .card-body{
-    /* padding: 0px 10px 10px 10px !important; */
     width: 100%;
     height: calc(100% - 156px);
     padding: 18px 16px 16px !important;
@@ -947,7 +918,6 @@ font-size: var(--font-size16);
     font-size: var(--font-size12);
     text-transform: uppercase;
 }
-
 .btn-padding{
     padding: 8px 16px;
     border-radius: 10px;
@@ -961,11 +931,9 @@ font-size: var(--font-size16);
     width: 100%;
     border-bottom: 0px !important;
     border-top: 0px !important;
-
 }
 .card-header,.card-footer{
    line-height: 0.7 !important;
-   /* margin-bottom: 10px; */
 }
 .card-header h2{
     display: flex !important;
@@ -984,7 +952,6 @@ font-size: var(--font-size16);
     display: inline-block;
     color: var(--dark-color);
     font-size: var(--font-size15);
-    /* line-height: 16px; */
     text-transform: capitalize;
     overflow: hidden;
     font-stretch: extra-condensed;
@@ -1010,13 +977,11 @@ font-size: var(--font-size16);
     text-decoration: none;
     margin-bottom: 0px !important;
 }
-
 .card-header h2 strong, .card-content h2 strong, .card-footer h2 strong{
     font-family: var(--montserrat-regular-400-para);
     display: inline-block;
     color: var(--li-color);
     font-size: var(--font-size18);
-    /* line-height: 20px; */
     text-transform: capitalize;
     overflow: hidden;
     font-stretch: extra-condensed;
@@ -1039,7 +1004,6 @@ font-size: var(--font-size16);
     padding: 0;
 }
 .card-img-margin{
-    /* padding: 10px; */
     height: 100px !important;
     transform: none !important;
 }
@@ -1067,7 +1031,6 @@ font-size: var(--font-size16);
     align-items: center;
     padding: 10px 0px;
     border-bottom: 1px solid var(--temp-head-line);
-    /* line-height: 2; */
 }
 .card__block{
     display: flex;
@@ -1107,12 +1070,8 @@ font-size: var(--font-size16);
     font-size: var(--font-size30);
     width: 3rem;
     height: 3rem;
-    /* border: 1px solid var(--red-main); */
-    /* border: inset; */
     background: var(--softpink);
-    /* font-size: var(--font-size22) !important; */
     display: inline-block;
-    /* border: 1px solid var(--red-main); */
     border-radius: 52% 48% 50% 50% / 29% 41% 59% 71% ;
     padding: 1.4rem 1.8rem;
     position: relative;
@@ -1137,7 +1096,6 @@ font-size: var(--font-size16);
 
     }
 }
-
 .expose__prop img{
     width: 70px;
     height: 70px;
@@ -1147,13 +1105,11 @@ font-size: var(--font-size16);
     bottom: -18px;
     position: relative;
 }
-
 .expose__prop ul{
     width: 100%;
     padding: 10px;
     background: var(--light-blue-op);
 }
-
 .expose__prop ul li{
     width: 100%;
 }
@@ -1161,9 +1117,6 @@ font-size: var(--font-size16);
     width: 100%;
     color: var(--pure-white) !important;
 }
-
-
-
 .margin-bottom{
     margin-bottom: 20px;
 }
@@ -1176,34 +1129,6 @@ font-size: var(--font-size16);
 .margin-center{
     margin: 0 auto;
 }
-/* .border-tradius-none{
-    border-radius: none;
-} */
-
-/* .fontawesomeicon::before {
-    display: inline-block;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
- }
-
-.Play::before {
-   font: var(--fa-font-solid);
-    content: ' \f04b';
-} */
-/* .video__part::after{
-    content: "#xf144";
-    font-family: 'Font Awesome 5';
-    position: absolute;
-    width: 40px;
-    height: 40px;
-
-  
-} */
-/* .video__text{
-    display: flex;
-    flex-direction: column;
-    flex: 0 0 200px;
-} */
 .video__text p{
     display: flex;
     white-space: wrap;
@@ -1211,36 +1136,11 @@ font-size: var(--font-size16);
     flex-wrap: wrap;
     font-size: var(--font-size14);
     color: var(--li-color);
-    /* padding-bottom: 20px; */
 }
 .video__text ul li a{
     color: var(--red-main) !important;
     width: 100%;
 }
-/* .video__sec{
-    width: 30%;
-}
-.video__Sec__right__Text{
-    width: 70%;
-} */
-/* .card__block{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 0px 0px 20px 0px;
-} */
-/* .video__Part{
-    display: flex !important;
-    flex-direction: row !important;
-} */
-/* .video__sec{
-    display: flex;
-    flex-direction: row; */
-/* }
-.video__sec p strong{
-    color: var(--li-color);
-    padding: 6px;
-} */
 .card-content ul li a{
     font-size: var(--font-size14);
     color: var(--para-dark-h2);
@@ -1256,9 +1156,6 @@ font-size: var(--font-size16);
 .card-content ul li a:hover{
     color: var(--red-main);
 }
-
-
 main{
     margin-top: 200px;
-    /* visibility: hidden; */
 }
