--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,3 @@
-
 @media(max-width:1199px){
     .container{
         max-width: 1080px;
@@ -12,8 +11,6 @@
       .ui-icon-circle-plus{
         transform: scale(1.5) !important;
       }
-    
-
       .bottomHead {
         position: fixed;
         top: 0;
@@ -28,7 +25,6 @@
         z-index: 80;
         padding: 6px 40px;
     }
-    
     .bottomHead .container .wrapper {
         display: flex;
         justify-content: space-between;
@@ -37,17 +33,14 @@
         line-height: 60px;
         height: 60px !important;
     }
-    
     .bottomHead .container .wrapper .logo {
         flex: 0 0 270%;
     }
-    
     .bottomHead .container .wrapper .logo a img {
         width: 220px;
         margin-bottom: 10px;
         float: right;
     }
-    
     .bottomHead .container .wrapper .burger {
         position: absolute;
         z-index: 99;
@@ -62,15 +55,12 @@
         padding-left: 20px;
         color: var(--pure-white);
     }
-   
     .mobile-nav-icon[name="close-outline"]{
       display: none;
     }
      .load{
         background:var(--para-shade-op);
-        /* visibility: hidden; */
     }
-    
         .bottomHead .megastar{
         position: relative;
         max-width: 350px;
@@ -141,8 +131,6 @@
     margin-right: 88px;
     padding: 2px 7px;
 }
-
-
 .mega__link {
     color: var(--li-color);
 	text-decoration: none !important;
@@ -150,12 +138,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* line-height: 1; */
     transition:0.5s ease-in-out;
-    padding: 0px 20px;
-    font-size: var(--font-size20);
+    padding: 7px 10px;
+    font-size: var(--font-size16);
+    line-height: 0.8;
     width: 100%;
 }
+
 .mega__link::after {
     content: '';
     width: 100%;
@@ -179,7 +168,7 @@
 	visibility: hidden;
 	transition: all 0.35s ease-in-out;
 	transform: translateX(100%);
-	
+
 	&.is-active {
 		opacity: 1;
 		visibility: visible;
@@ -214,7 +203,6 @@ text-transform: capitalize;
 position: relative;
 transition: 0.5s ease-in-out;
 }
-
 .center__div ul li a:hover{
     color: var(--red-main);
 }
@@ -231,7 +219,6 @@ transition: 0.5s ease-in-out;
     color: var(--dark-color);
     font-family: var(--roboto-extra-sub-heading);
     font-size: var(--font-size15);
-    /* font-weight: bold; */
     letter-spacing: 1px;
 }
    .light-color{
@@ -267,13 +254,6 @@ transition: 0.5s ease-in-out;
     background-position: -65px -16px;
 }
 /* *******************accordian H4*************************** */
-/* .mega__item h4 sub{
-    position: absolute;
-    bottom: 11px;
-    font-size: var(--font-size17);
-    right: 97px;
-} */
-
 .ui-accordion .ui-accordion-header{
     font-family: var(--roboto-bold-sub-heading);
     display: flex;
@@ -298,7 +278,6 @@ transition: 0.5s ease-in-out;
 .ui-accordion .ui-accordion-header.active{
     background: var(--dark-blue-op) !important;
     color: var(--pure-white);
-
 }
 .ui-accordion .ui-accordion-content{
     padding: 1rem;
@@ -353,35 +332,6 @@ transition: 0.5s ease-in-out;
     .video__text p{
         font-size: var(--font-size12);
     }
-}
-@media(max-width:992px){
-   
-    .container {
-        margin: 0 auto;
-        padding: 0px 20px !important;
-    }
-    .h4-set h4{
-        text-align: left;
-        color: var(--li-color);
-        font-size: var(--font-size17);
-    }
-    .bottomline button{
-        padding: 5px 10px !important;
-        margin: 10px 3px;
-    }
-     .button2{
-        font-size: var(--font-size16);
-    }
-   
-    .counter__setting .container .wrapper .counter__text .counter p{
-        font-size: var(--font-size11);
-    }
-    .counter__setting .container .wrapper .counter__text h2{
-        font-size: var(--font-size24);
-    }
-    .fa-inr,.fa-building,.fa-tasks,.font-reload,.fa-chart-line,.fa-file-lines,.fa-calculator,.fa-book{
-        font-size: var(--font-size24);
-    }
     .mega__link {
         padding: 7px 10px;
         font-size: var(--font-size16);
@@ -394,6 +344,9 @@ transition: 0.5s ease-in-out;
     .mega-menu{
         margin-bottom: 0px;
         height: 102vh;
+    }
+    .button2{
+        font-size: var(--font-size16);
     }
     .button2{
         width: 100px;
@@ -439,6 +392,30 @@ transition: 0.5s ease-in-out;
     :is(.contentSection ul li a,.contentSection2 ul li a,.contentSection3 ul li a){
         font-size: var(--font-size16);
     }
+}
+@media(max-width:992px){
+    .container {
+        margin: 0 auto;
+        padding: 0px 20px !important;
+    }
+    .h4-set h4{
+        text-align: left;
+        color: var(--li-color);
+        font-size: var(--font-size17);
+    }
+    .bottomline button{
+        padding: 5px 10px !important;
+        margin: 10px 3px;
+    }
+    .counter__setting .container .wrapper .counter__text .counter p{
+        font-size: var(--font-size11);
+    }
+    .counter__setting .container .wrapper .counter__text h2{
+        font-size: var(--font-size24);
+    }
+    .fa-inr,.fa-building,.fa-tasks,.font-reload,.fa-chart-line,.fa-file-lines,.fa-calculator,.fa-book{
+        font-size: var(--font-size24);
+    } 
 }
 @media(max-width:768px){
     .logo a img{
